--- a/partials/index-en.html
+++ b/partials/index-en.html
@@ -211,13 +211,13 @@
                     <p class="spec-desc">Advanced interactive systems that detect movement and react instantly.</p>
                 </div>
 
-                <!-- 2. Education & Rehabilitation -->
+                <!-- 2. Various Applications -->
                 <div class="spec-card">
                     <svg class="spec-icon" fill="currentColor" viewBox="0 0 24 24">
                         <path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z" />
                     </svg>
-                    <h3 class="spec-title">Education & Healthcare</h3>
-                    <p class="spec-desc">Used in schools, care institutions and rehabilitation centers.</p>
+                    <h3 class="spec-title">Various Applications</h3>
+                    <p class="spec-desc">Education, healthcare facilities, play parks, events etc.</p>
                 </div>
 
                 <!-- 3. For All Ages -->
