--- a/partials/index-nl.html
+++ b/partials/index-nl.html
@@ -212,13 +212,13 @@
                         reageren.</p>
                 </div>
 
-                <!-- 2. Onderwijs & Revalidatie -->
+                <!-- 2. Verschillende Toepassingen -->
                 <div class="spec-card">
                     <svg class="spec-icon" fill="currentColor" viewBox="0 0 24 24">
                         <path d="M5 13.18v4L12 21l7-3.82v-4L12 17l-7-3.82zM12 3L1 9l11 6 9-4.91V17h2V9L12 3z" />
                     </svg>
-                    <h3 class="spec-title">Onderwijs & Revalidatie</h3>
-                    <p class="spec-desc">Ingezet in scholen, zorginstellingen en revalidatiecentra.</p>
+                    <h3 class="spec-title">Verschillende Toepassingen</h3>
+                    <p class="spec-desc">Onderwijs, zorginstellingen, speelparken, evenementen etc.</p>
                 </div>
 
                 <!-- 3. Voor Alle Leeftijden -->
